2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: fixed buglet in GetAppPath.

2003-02-04  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* Makefile.am: Add rpm spec files to packaging
	
2003-02-03  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* packaging/redhat: Added mod_mono.spec and mono.conf for RPM generation, thanks to David Hollis <dhollis@davehollis.com> for submitting it.
	
2003-02-02  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Fixed returning null value when no query string is present. Thanks to "Ula? VURAL" <uvural@netorbits.com> and Geo <_geo@post.sk> for reporting this.
	
2003-01-22  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Some typos and step by step instructions for Red Hat 8.0
	* README: Removed reference to POST not working
	* FAQ.txt: Added doc with more common problems people find installing mod_mono
	* Makefile.am: Added FAQ.txt to the dist files
	
2003-01-18  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Updated install instructions to cover --with-apxs
	* configure.in: Check in /usr/sbin/apxs
	* src/mod_mono.c: Expose function to help remove prefix
	* src/Request.cs: RemovePrefix helper function to remove app virtual path
	before using MapPath
	* src/ApacheWorkerRequest.cs: MS docs seem to be wrong and GetFilePath returns uri path
	
2003-01-18  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	Submitted by Alp Toker <alp@atoker.com> :
	* configure.in: Use --with-apxs instead of --with-apache2 
	* src/Makefile.am: Install target

2003-01-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>
	* src/ApacheWorkerRequest.cs: added FIXME.
	* src/MonoWorkerRequest.cs: synched with the one in xsp.

2003-01-09  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* mcs/ApacheWorkerRequest.cs : Fixed typo, thanks Sergio Luis Valle Mayorga for catching it

2003-01-07  Daniel Lopez Ridruejo <daniel @ rawbyte.com>